# TFM-Ejecucion-Presupuestaria

./: .dockerignore  .gitattributes  .gitignore  .~lock.Inventario_datasets_datos_gob_es.xlsx#  DEPLOY_AZURE.md  Dockerfile.dashboard  Dockerfile.pipeline  Entregable3_TFM_Ejecucion_Presupuestaria_BACKUP.docx  Entregable3_TFM_Ejecucion_Presupuestaria_BACKUP2.docx  Entregable3_TFM_Ejecucion_Presupuestaria_BACKUP3.docx  Entregable4_TFM_Ejecucion_Presupuestaria.docx  Entregable4_TFM_Ejecucion_Presupuestaria_BACKUP.docx  Entregable4_TFM_Ejecucion_Presupuestaria_BACKUP2.docx  Makefile  README.md  Resumen_datasets_datos_gob_es.md  deploy.ps1  docker-compose.yml  pyproject.toml  requirements-dashboard.txt  requirements-docker.txt  requirements.txt  ~$tregable3_TFM_Ejecucion_Presupuestaria.docx
.streamlit/: config.toml
config/: __init__.py  ccaa_catalog.yaml  logging_config.yaml  settings.py
data_lake/: README.md
docker/: pipeline-entrypoint.sh
docs/: HALLAZGOS_EDA.md  REQUERIMIENTOS_EDA.md  evidencia_datos.txt  evidencia_features.json  evidencia_features.txt  referencias.bib
flows/: __init__.py  deployments.py  flow_build_features.py  flow_download_distributions.py  flow_etl_by_ccaa.py  flow_ingest_catalog.py  flow_main.py  flow_train_models.py
notebooks/: 01_eda.ipynb  02_analisis_estadistico_ccaa.ipynb  03_modelado_predictivo.ipynb  04_modelado_predictivo_azure.ipynb
scripts/: _diag_aviles.py  _diag_brecha.py  batch_evaluate.py  build_feature_store_azure.py  build_model_dataset.py  check_fact_schema.py  check_features.py  check_modeling_viability.py  eda.py  (+18 more)
(+50 files in other folders)
